k8s-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: guess-game
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
       - name: frontend
         image: leandrolbbernardes/pucminas:frontend-reactapp-guess-game
         resources:
           requests:
             memory: "10Mi"
             cpu: "10m"
           limits:
             memory: "256Mi"
             cpu: "250m"
         livenessProbe:
           tcpSocket:
             port: 80
           initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 5
