k8s-manifest/postgresdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  namespace: guess-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgresdb
          image: postgres:latest
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: postgresdb-storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: postgresdb-storage
          persistentVolumeClaim:
            claimName: postgresdb-pvc
