k8s-manifest/guess-game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guess-game-ingress
  namespace: guess-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: guessgame.local
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
